--- a/src/Admin_p/Admin_p.css
+++ b/src/Admin_p/Admin_p.css
@@ -6,13 +6,14 @@
   /* margin: 0 auto; */
 }
 
-.button {
+.button_id66 {
   background-color: #007bff;
   color: #fff;
   border: none;
-  padding: 10px 20px;
-  margin: 10px 0;
+width:10%;
+height:auto;
   cursor: pointer;
+/* font-size:10px; */
   border-radius: 5px;
 }
 
@@ -84,6 +85,8 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  font-weight:900;
+  text-align: center;
   /* max-width: 200px; */
   /* border:2px solid black; */
   /* box-shadow:0px 0px 5px rgb(186, 186, 186); */
@@ -140,5 +143,41 @@
 .name___ru{
   width:300px;
   height:auto;
+  /* font-size:50px; */
+  font-weight:900;
+  
+  /* border:2px solid black; */
+}
+.button_item_id9{
+  width:100%;
+  height:auto;
+  /* border:2px solid black; */
+  /* display: flex; */
+  /* justify-content:end; */
+}
+.sort_id{
+  width:100%;
+  height:64px;
+  display: flex;
+  /* border:2px solid black; */
+  /* align-items:2px solid black; */
+  justify-content: start;
+align-items: center;
+}
+#sort_id{
+  width:50%;
+  height:32px;
+border-radius:8px;
+border:1px solid rgb(209, 204, 204);
+/* overflow: none; */
+outline:none;
+margin-left:50px;
+padding-left:5px;
+box-shadow:0px 0px 5px rgb(192, 191, 191);
+}
+.container_id90{
+  width:100%;
+  height:auto;
+  display: flex;
   /* border:2px solid black; */
 }
