--- a/src/Chaild/Chaild.css
+++ b/src/Chaild/Chaild.css
@@ -347,7 +347,7 @@
   display: flex;
 }
 .star {
-  color: yellow;
+  color: rgb(0, 0, 0);
 }
 .span_price {
   color: rgb(0, 0, 0);
@@ -672,14 +672,15 @@ align-items: start;
   height:auto;
   position: fixed;
   background-color: rgb(255, 255, 255);
-  /* margin-bottom: 300px; */
-  /* margin-left: 1000px; */
+  /* margin-bottom:300px; */
+  margin-left: 1000px;
   bottom:40px;
   right: 40px;
   /* border:2px solid rgb(96, 94, 94); */
   box-shadow:0px 0px 10px rgb(120, 118, 118);
   border-radius:12px;
-  padding:2px;
+  padding:10px;
+  z-index:999999;
 }
 .FaRobot {
   font-size: 50px;
@@ -692,6 +693,11 @@ align-items: start;
 .bot_chat_input{
   width:100%;
   height:35px;
+  /* border:2px solid rgb(220, 218, 218); */
+  border:none;
+  box-shadow:0px 0px 5px rgb(172, 171, 171);
+  border-radius:8px;
+  padding-left:2px;
 }
 .bot_chat_input1{
   width:100%;
@@ -701,6 +707,7 @@ align-items: start;
   gap:10px;
   padding:2px;
 }
+
 .setcha14{
 width:40px;
 height:auto;
@@ -709,7 +716,8 @@ padding:5px;
 /* border-radius:50%; */
 /* font-size:30px; */
 color:rgb(151, 151, 151);
-/* background-color:black; */
+
+
 margin-bottom:20px;
 margin-left:10px;
 }
