--- a/src/OneProduct/OneProduct.css
+++ b/src/OneProduct/OneProduct.css
@@ -176,3 +176,17 @@ body, html {
     color: #555;
     margin: 5px 0;
 }
+.generate-pdf {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin-top: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 4px;
+}
+
+.generate-pdf:hover {
+    background-color: #0056b3;
+}
