--- a/src/Products/Products.css
+++ b/src/Products/Products.css
@@ -144,7 +144,7 @@ padding-left:10px;
     /* border:2px solid black; */
 }
 .star {
-  color: yellow;
+  color: rgb(0, 0, 0);
 }
 
 .power-calculator {
