--- a/src/Admin_p/Admin_p.css
+++ b/src/Admin_p/Admin_p.css
@@ -1,9 +1,6 @@
 .container {
   width:100%;
   height:auto;
-  /* padding: 20px; */
-  /* max-width: 600px; */
-  /* margin: 0 auto; */
 }
 
 .button_id66 {
@@ -180,4 +177,94 @@ box-shadow:0px 0px 5px rgb(192, 191, 191);
   height:auto;
   display: flex;
   /* border:2px solid black; */
+}
+
+.container_button2{
+width:100%;
+height:700px;
+display: flex;
+border:2px solid black;
+/* box-sizing: border-box; */
+}
+.container_button1{
+  width:20%;
+  height:auto;
+  background-color:rgb(52, 52, 52);
+  /* border:2px solid black; */
+}
+.container_button3{
+  width:100%;
+  height:auto;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* border:2px solid black; */
+}
+.parent_chail{
+  width:100%;
+  height:auto;
+  display: flex;
+  gap:10px;
+  /* justify-content: center; */
+  align-items: center;
+  /* border:2px solid black; */
+  box-sizing: border-box;
+}
+.bukvaf{
+  width:50px;
+  height:50px;
+  padding:10px;
+  /* text-align: center; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:rgb(214, 209, 209);
+  box-shadow:0px 0px 10px rgb(41, 41, 41);
+  /* border:2px solid black; */
+  border-radius:50%;
+  box-sizing: border-box;
+  margin:10px;
+}
+.parent_id_f{
+font-weight:900;
+font-size:30px;
+color:rgb(48, 48, 48);
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+box-sizing: border-box;
+}
+.kontrol_b{
+  font-weight:900;
+font-size:30px;
+color:rgb(161, 161, 161);
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+box-sizing: border-box;
+}
+.admin_link_1{
+  width:100%;
+  height:auto;
+  padding:8px;
+  box-sizing: border-box;
+/* border:2px solid black; */
+cursor: pointer;
+}
+.admin_link_1:hover{
+  background-color:rgb(74, 72, 72);
+}
+.admin__icons{
+  width:100%;
+  height:auto;
+  /* display: flex; */
+  margin-left:10px;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  gap:10px;
+  /* justify-content: center; */
+  /* align-items: center; */
+}
+.IoHome1{
+  font-size:30px;
+color:rgb(193, 189, 189);
+}
+.link_p2{
+  color:white;
 }
