--- a/src/Chaild/Chaild.css
+++ b/src/Chaild/Chaild.css
@@ -36,8 +36,9 @@
 
 .logo1 {
   width: 250px;
-  height: auto;
+  height:auto;
   cursor: pointer;
+  /* border:2px solid black; */
 }
 
 .logo_img {
