--- a/src/Parent/Parent.css
+++ b/src/Parent/Parent.css
@@ -23,7 +23,7 @@
 }
 
 .shahar{
-    width:15%;
+    width:20%;
     height:40px;
     display: flex;
     padding:5px;
@@ -84,7 +84,7 @@
     box-shadow:0px 0px 5px rgb(121, 120, 120);
 }
 .hamkor{
-    width:12%;
+    width:20%;
     height:auto;
     display: flex;
     gap:5px;
@@ -103,7 +103,7 @@
     color:rgb(0, 0, 0);
 }
 .yuridik{
-    width:11%;
+    width:20%;
     height:auto;
     display: flex;
     gap:5px;
@@ -123,7 +123,7 @@
     color:rgb(0, 0, 0);
 }
 .yordam{
-    width:8%;
+    width:20%;
     height:auto;
     display: flex;
     gap:5px;
@@ -174,7 +174,7 @@
 }
 
 .tel{
-    width:15%;
+    width:20%;
     height:auto;
     display: flex;
     gap:10px;
@@ -183,7 +183,7 @@
     /* border:2px solid black; */
     box-sizing: border-box;
     cursor: pointer;
-    margin-left:520px;
+    margin-left:400px;
     box-sizing: border-box;
 }
 .hr1{
@@ -217,4 +217,13 @@
   #button:hover {
     background-color: #0056b3;
   }
+
   
+  @media only screen and (width<950px) {
+   .yuridik{
+    width:40%;
+   }
+   .yordam{
+    margin-left:20px;
+   }
+}
