--- a/src/Parent/Parent.css
+++ b/src/Parent/Parent.css
@@ -112,6 +112,7 @@
     /* border:2px solid black; */
     box-sizing: border-box;
     cursor: pointer;
+    color:rgb(255, 255, 255);
 }
 .BiSolidShoppingBags{
     font-size:25px;
@@ -120,7 +121,9 @@
 .yuridik{
     font-size:15px;
     font-weight:900;
-    color:rgb(0, 0, 0);
+    /* color:rgb(0, 0, 0); */
+    color:rgb(255, 255, 255);
+
 }
 .yordam{
     width:20%;
