--- a/src/Admin_p/Admin_p.css
+++ b/src/Admin_p/Admin_p.css
@@ -181,7 +181,7 @@ box-shadow:0px 0px 5px rgb(192, 191, 191);
 
 .container_button2{
 width:100%;
-height:700px;
+height:auto;
 display: flex;
 border:2px solid black;
 /* box-sizing: border-box; */
@@ -268,3 +268,5 @@ color:rgb(193, 189, 189);
 .link_p2{
   color:white;
 }
+
+
