--- a/src/Admin_p/Mahsulotlar.css
+++ b/src/Admin_p/Mahsulotlar.css
@@ -63,7 +63,7 @@
     height:auto;
     display: flex;
     flex-direction: column;
-border:2px solid black;
+/* border:2px solid black; */
 box-sizing: border-box;
 margin-top:20px;
 }
@@ -92,4 +92,23 @@ margin-top:20px;
   .table button:hover {
     background-color: #ddd;
   }
-  
+  #input_sotr_buy{
+    width:100%;
+    height:32px;
+    outline:none;
+    border-radius:8px;
+    border:none;
+    box-shadow:0px 0px 2px black;
+
+  }
+  .styled-table{
+    width:100%;
+  }
+  #edit-button{
+    width: 35px;
+    height:35px;
+    display: flex;
+    justify-content: center;
+align-items: center;
+/* padding:10px 10px; */
+  }
