--- a/src/Chaild/Chaild.css
+++ b/src/Chaild/Chaild.css
@@ -314,7 +314,7 @@
   /* padding:10px; */
   /* gap: 10px; */
 }
-.card {
+.cardd {
   width:15%;
   height: auto;
   cursor: pointer;
@@ -324,6 +324,7 @@
   background-color: #f9f9f9;
   text-align: start;
   /* cursor: pointer; */
+  /* border: 2px solid black; */
   color: black;
 }
 #src_img11{
