--- a/src/Chaild/CategoriesAndProducts.css
+++ b/src/Chaild/CategoriesAndProducts.css
@@ -27,3 +27,24 @@
   .category_name_uz_id67{
     font-size:500px;
   }
+  .sikitki_tovar1{
+    width: 60px;
+    height:60px;
+    /* border:2px solid black; */
+    border-radius:50%;
+    position:absolute;
+    box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+    margin-top:180px;
+    margin-left:140px;
+    background-color:#ef2b15;
+    text-align: center;
+    transform: rotate(20deg);
+  }
+  .sikidka21{
+  font-weight:400;
+  color:white;
+  font-size:13px;
+  }
