--- a/src/Products/Products.css
+++ b/src/Products/Products.css
@@ -248,3 +248,23 @@ padding-left:10px;
     box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.1);
   }
   
+  .sikitki_tovarr{
+    width: 70px;
+    height:70px;
+    /* border:2px solid black; */
+    border-radius:50%;
+    position:absolute;
+    box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+    margin-top:60px;
+    margin-left:150px;
+    background-color:#ef2b15;
+    text-align: center;
+    transform: rotate(20deg);
+  }
+  .sikidka21{
+  font-weight:900;
+  color:white;
+  }
