--- a/src/Mobile/Home.css
+++ b/src/Mobile/Home.css
@@ -368,7 +368,7 @@ del{
 
 .slide-image {
   width: 100%;
-  height: 100%;
+  height:200px;
   object-fit: cover; /* Rasmlarni container ichida o'zgartirish */
   border-radius: 10px;
 }
@@ -447,4 +447,25 @@ align-items: center;
   height:auto;
   border:2px solid black;
   margin-top:50px;
+}
+.sikitki_tovar22{
+  width: 60px;
+  height:60px;
+  /* border:2px solid black; */
+  border-radius:50%;
+  position:absolute;
+  box-sizing: border-box;
+display: flex;
+justify-content: center;
+align-items: center;
+  margin-top:210px;
+  margin-left:120px;
+  background-color:#ef2b15;
+  text-align: center;
+  transform: rotate(20deg);
+}
+.sikidka222{
+font-weight:400;
+color:white;
+font-size:13px;
 }
