--- a/src/Mobile/Call.css
+++ b/src/Mobile/Call.css
@@ -36,6 +36,7 @@
     justify-content: center;
     align-items: center;
     /* border:2px solid black; */
+    background-color:rgb(3, 8, 101);
     box-sizing: border-box;
   }
   .FaTelegram_1{
@@ -66,3 +67,11 @@
     align-items:center;
     gap:60px;
   }
+
+  .page212{
+    width:250px;
+    height:auto;
+    color:white;
+    padding:10px;
+    margin-left:90px;
+}
