--- a/src/Mobile/Profil.css
+++ b/src/Mobile/Profil.css
@@ -50,7 +50,9 @@
   justify-content: center;
   align-items: center;
   height: auto;
-  background-color: blue;
+  /* background-color: blue; */
+background-color: rgb(3, 8, 101);
+
   box-sizing: border-box;
 }
 
@@ -78,4 +80,11 @@
   max-height: 100px; /* or any sufficient height */
   opacity: 1;
   padding: 10px;
+}
+.page2122{
+  width:250px;
+  height:auto;
+  color:white;
+  padding:10px;
+  margin-left:90px;
 }
