--- a/src/Chaild/Chaild.css
+++ b/src/Chaild/Chaild.css
@@ -911,9 +911,12 @@ color:red;
 align-items: center;
     /* margin-top:50px; */
     padding:10px;
-    background-color:#797a7b;
+    /* background-color:#efeaea; */
     /* border:2px solid black; */
     animation: name 1s ease-in-out;
+    border:2px solid rgb(232, 230, 230);
+    box-shadow:0px 0px 20px rgb(207, 207, 207);
+    
   }
   @keyframes name {
     0%   {background-color: rgb(96, 96, 96);}
