--- a/src/Mobile/SelectedCardsPage.css
+++ b/src/Mobile/SelectedCardsPage.css
@@ -7,7 +7,7 @@
     gap: 20px;
     justify-content: center;
     /* background-color:black; */
-    padding: 10px;
+    /* padding: 10px; */
     box-sizing: border-box;
 }
 
@@ -35,6 +35,7 @@
 .product-count, 
 .product-priceMonth {
     margin: 5px 0;
+    font-size:12px;
 }
 #product-name-uz{
     color:blue;
@@ -50,6 +51,7 @@
 .product-price {
     font-weight: bold;
     color: #000000;
+    font-size:12px;
 }
 
 .loading-text {
@@ -109,6 +111,7 @@ height:150px;
 #product-priceMonth{
     text-decoration: line-through;
     color:rgb(255, 0, 0);
+    font-size:12px;
 
 }
 .category_name1{
@@ -247,4 +250,16 @@ padding-left:10px;
     align-items: center;
     border:2ps solid  black;
     box-sizing: border-box;
+    background-color:#0056b3;
+  }
+  .paage21e{
+    width:100%;
+    height:auto;
+    text-align: center;
+    /* background-color:white; */
+    color:white;
+    padding:10px;
+  }
+  .category-name1{
+    margin-left:20px;
   }
