--- a/src/Chaild/Chaild.css
+++ b/src/Chaild/Chaild.css
@@ -334,7 +334,7 @@
 .card_name3232 {
   /* font-size: 20px; */
   /* margin: 8px 0; */
-  color:#002fff;
+  color:#000000;
   font-weight:200;
   white-space: nowrap;
   overflow: hidden;
@@ -351,11 +351,12 @@
 .star {
   color: rgb(0, 0, 0);
 }
-.span_price {
+.span_1price {
   /* color: rgb(0, 0, 0);
    */
    color: #3a5cf5;
   font-weight:700;
+  font-size:18px;
 }
 #button_item1 {
   margin-top: 10px;
@@ -899,7 +900,7 @@ color:red;
   }
   .Oldingi_narx{
     font-weight:400;
-    font-size:15px;
+    font-size:12px;
     /* color: #333; */
 
   }
@@ -981,8 +982,9 @@ align-items: center;
   }
  
   .Card_loco_iconsid1{
-    width:250px;
-    height:250px;
+    width:200px;
+    height:auto;
+    margin-top:20px;
     object-fit:cover;
     border-radius:5px;
     transition: padding 0.3s ease;
@@ -1034,14 +1036,21 @@ align-items: center;
 display: flex;
 justify-content: center;
 align-items: center;
-  margin-top:19px;
+  margin-top:25px;
   margin-left:140px;
   background-color:#ef2b15;
   text-align: center;
   transform: rotate(20deg);
+  /* padding:10px; */
 }
 .sikidka2{
 font-weight:400;
 color:white;
 font-size:13px;
+}
+.rerf{
+  color:rgb(8, 8, 8);
+  font-size:20px;
+  margin-left:10px;
+  padding:10px;
 }
