--- a/src/OneProduct/OneProduct.css
+++ b/src/OneProduct/OneProduct.css
@@ -17,6 +17,7 @@ body, html {
     background-color: #fff;
     border: 1px solid #e0e0e0;
     border-radius: 8px;
+    gap:100px;
     overflow: hidden;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
 }
@@ -64,8 +65,8 @@ body, html {
 .details-section {
     width:100%;
     height:auto;
-    flex: 0.4;
-    padding: 20px;
+    /* flex: 0.4; */
+    /* padding: 20px; */
     border-right: 1px solid #e0e0e0;
 }
 
@@ -135,7 +136,7 @@ body, html {
 
 .price-in-usd {
     font-size: 14px;
-    color: #00e804;
+    color: #33ff00;
 }
 
 .add-to-cart {
@@ -158,7 +159,10 @@ body, html {
 }
 
 .delivery-section {
-    flex: 0.2;
+    width:100%;
+    height:auto;
+    /* border:2px solid black; */
+    /* flex: 0.2; */
     padding: 20px;
 }
 
@@ -208,6 +212,7 @@ align-items: center;
     display: flex;
     justify-content: center;
     align-items: center;
+    gap:50px;
     padding: 20px;
     /* width: 100%; */
     background-color: #f5f5f5;
@@ -238,3 +243,91 @@ align-items: center;
     justify-content: center;
     align-items: center;
 }
+
+
+.product_card {
+    width:100%;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 20px;
+    /* max-width: 300px; */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .price-section {
+    margin-bottom: 20px;
+  }
+  
+  .price {
+    font-size: 24px;
+    font-weight: bold;
+  }
+  
+  .price-in-usd {
+    color: #888;
+  }
+  
+  .availability {
+    color: #4CAF50; /* Green */
+  }
+  
+  .delivery-info {
+    margin-bottom: 20px;
+  }
+  
+  .free-delivery {
+    font-weight: bold;
+  }
+  
+  .add-to-cart {
+    background-color: #007bff;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  .add-to-cart:hover {
+    background-color: #0056b3;
+  }
+  
+  .installment-info {
+    border-top: 1px solid #ddd;
+    padding-top: 10px;
+  }
+  
+  .installment-title {
+    font-weight: bold;
+  }
+  
+  .more-info-link {
+    color: #007bff;
+    text-decoration: none;
+  }
+  
+  .more-info-link:hover {
+    text-decoration: underline;
+  }
+  .IoIosStarOutline{
+    font-size:25px;
+    color: #2982e2;
+    /* background-color:#007bff; */
+  }
+
+
+
+  
+  .format_firice_id{
+    width:45%;
+    height:auto;
+    border:2px solid rgb(213, 213, 213);
+    padding:5px;
+    border-radius:12px;
+    
+  }
+  #price_in_usd{
+    color:#b48955;
+    font-weight:600;
+  }
