--- a/src/Chaild/Chaild.css
+++ b/src/Chaild/Chaild.css
@@ -321,7 +321,7 @@
   padding:10px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  background-color: #f9f9f9;
+  background-color: #ffffff;
   text-align: start;
   /* cursor: pointer; */
   /* border: 2px solid black; */
@@ -919,7 +919,7 @@ align-items: center;
     /* border:2px solid black; */
     animation: name 1s ease-in-out;
     border:2px solid rgb(232, 230, 230);
-    box-shadow:0px 0px 20px rgb(207, 207, 207);
+    box-shadow:0px 0px 20px rgb(255, 255, 255);
     
   }
   @keyframes name {
@@ -949,6 +949,7 @@ align-items: center;
     justify-content: center;
     align-items: center;
     /* border:2px solid black; */
+    /* background-color:rgb(255, 255, 255); */
     cursor: pointer;
   }
   .kontainer_id_item3{
