--- a/src/Chaild/Chaild.css
+++ b/src/Chaild/Chaild.css
@@ -237,7 +237,7 @@
   width: 100%;
   height: auto;
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   /* border:2px solid black; */
   /* align-items: center; */
 }
@@ -288,9 +288,12 @@
 .sidebar h2 {
   margin-top: 0;
 }
-.main-content {
+.main_content1 {
   width: 100%;
   height: auto;
+  /* display: flex; */
+  /* flex-direction: column; */
+
   
 }
 .card_container {
@@ -939,6 +942,7 @@ align-items: center;
     /* border:2px solid black; */
     /* background-color:#002fff; */
     cursor: pointer;
+    background-color:transparent;
   
   }
   .kontainer_id_item2{
