--- a/src/Mobile/Home.css
+++ b/src/Mobile/Home.css
@@ -5,18 +5,13 @@
     flex-direction: column;
     box-sizing: border-box;
 }
-.parent_chaild_id{
-    background-color:rgb(3, 8, 101);
-    padding:10px;
-    width:100%;
-    height:auto;
-    display: flex;
-}
-.page21{
+
+.page__221{
     width:250px;
     height:auto;
     color:white;
-    margin-left:90px;
+    /* margin-left:90px; */
+    /* margin-bottom:10px; */
 }
 .IoMenu_item_id{
     font-size:50px;
@@ -48,6 +43,8 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    /* margin-left:50px; */
+    margin-top:18px;
   }
   .filter-button:hover {
     border:2px solid white;
@@ -514,4 +511,23 @@ font-size:12px;
   width:30px;
   height:auto;
   margin-left:25px;
+}
+
+.div_clos_item{
+  margin-left:50px;
+}
+.parent_chaild_id{
+  width:100%;
+  height:auto;
+    background-color:rgb(3, 8, 101);
+    padding:10px;
+  
+    display: flex;
+}
+.wfff{
+  width:100%;
+  height:auto;
+  display: flex;
+  gap:80px;
+  /* border:2px solid black; */
 }
