--- a/src/Kontact/Kontact.css
+++ b/src/Kontact/Kontact.css
@@ -9,6 +9,8 @@
   /* align-items: center; */
   gap:20px;
 /* border:2px solid black; */
+margin-top:40px;
+background-color:rgb(255, 254, 254);
 }
 .contact_id_item{
   width:100%;
@@ -20,7 +22,7 @@
   /* border:2px solid black; */
 }
 .call_center{
-  color:rgb(0, 4, 255);
+  color:rgb(0, 0, 0);
 margin-top:5px;
 }
 .tel_item{
