--- a/src/Parent/Parent.css
+++ b/src/Parent/Parent.css
@@ -49,7 +49,7 @@
     display: flex;
     flex-wrap: wrap;
     border-radius:8px;
-    margin-top:600px;
+    margin-top:180px;
     margin-left:80px;
     color:white;
     padding:10px;
@@ -126,7 +126,7 @@
 
 }
 .yordam{
-    width:20%;
+    width:100%;
     height:auto;
     display: flex;
     gap:5px;
@@ -135,10 +135,11 @@
     /* border:2px solid black; */
     box-sizing: border-box;
     cursor: pointer;
+    /* background-color: #007bff; */
 }
-.GrHelpBook{
+.MdHelp{
     font-size:25px;
-    color: rgb(115, 110, 234);
+    color: rgb(65, 127, 203);
 }
 .Yordam1    {
     font-size:15px;
@@ -162,7 +163,7 @@
     font-weight:900;
     text-align: center;
 }
-.BsFillTelephoneFill{
+.BsFillTelephoneFill12{
     font-size:25px;
     color: rgb(115, 110, 234);
 
